// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HeaderBackButton Back 1`] = `
<View
  style={
    Array [
      Object {
        "paddingLeft": 24,
      },
      Object {
        "paddingTop": 24,
        "position": "absolute",
        "top": 0,
      },
      false,
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 16,
        "left": 16,
        "right": 16,
        "top": 16,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="header-back-button"
  >
    <View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        color={4294967295}
        focusable={false}
        height={20}
        id="prefix__Calque_1"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        tintColor={4294967295}
        vbHeight={20}
        vbWidth={20}
        width={20}
        x={0}
        xmlSpace="preserve"
        y={0}
      >
        <RNSVGGroup>
          <RNSVGGroup
            name="prefix__Page-1"
          >
            <RNSVGPath
              d="M13.9 0l2.9 3-6.9 7 6.9 7-2.9 3L4 10z"
              fill={4294967295}
              name="prefix__arrow_left"
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Storyshots HeaderBackButton Close 1`] = `
<View
  style={
    Array [
      Object {
        "paddingLeft": 24,
      },
      Object {
        "paddingTop": 24,
        "position": "absolute",
        "top": 0,
      },
      false,
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 16,
        "left": 16,
        "right": 16,
        "top": 16,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="header-close-button"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      color={4294967295}
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
      width={16}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 0h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M21.456 5.414l-2.829-2.828-6.585 6.586-6.586-6.586-2.829 2.828L9.213 12l-6.586 6.586 2.829 2.828 6.586-6.586 6.585 6.586 2.829-2.828L14.87 12z"
          fill={4294967295}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Storyshots HeaderBackButton Custom color 1`] = `
<View
  style={
    Array [
      Object {
        "paddingLeft": 24,
      },
      Object {
        "paddingTop": 24,
        "position": "absolute",
        "top": 0,
      },
      false,
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 16,
        "left": 16,
        "right": 16,
        "top": 16,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="header-close-button"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      color={4278190080}
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      tintColor={4278190080}
      vbHeight={24}
      vbWidth={24}
      width={16}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 0h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M21.456 5.414l-2.829-2.828-6.585 6.586-6.586-6.586-2.829 2.828L9.213 12l-6.586 6.586 2.829 2.828 6.586-6.586 6.585 6.586 2.829-2.828L14.87 12z"
          fill={4278190080}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Storyshots HeaderBackButton Home 1`] = `
<View
  style={
    Array [
      Object {
        "paddingLeft": 24,
      },
      Object {
        "paddingTop": 24,
        "position": "absolute",
        "top": 0,
      },
      false,
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 16,
        "left": 16,
        "right": 16,
        "top": 16,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="header-back-button"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      color={4294967295}
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
      width={20}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M.001.001h24v24.001h-24z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M21.707 12.293L19 9.586V5h-3v1.586l-3.293-3.293a.999.999 0 00-1.414 0l-9 9A1 1 0 003 14h2v8h5v-5h4v5h5v-8h2a.999.999 0 00.707-1.707z"
          fill={4294967295}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Storyshots HeaderBackButton No safe area 1`] = `
<View
  style={
    Array [
      Object {
        "paddingLeft": 24,
      },
      Object {
        "paddingTop": 24,
        "position": "absolute",
        "top": 0,
      },
      Object {
        "top": 0,
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 16,
        "left": 16,
        "right": 16,
        "top": 16,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="header-close-button"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      color={4278190080}
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      tintColor={4278190080}
      vbHeight={24}
      vbWidth={24}
      width={16}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 0h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M21.456 5.414l-2.829-2.828-6.585 6.586-6.586-6.586-2.829 2.828L9.213 12l-6.586 6.586 2.829 2.828 6.586-6.586 6.585 6.586 2.829-2.828L14.87 12z"
          fill={4278190080}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Storyshots HeaderBackButton Not floating 1`] = `
<View
  style={
    Array [
      Object {
        "paddingLeft": 24,
      },
      false,
      false,
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 16,
        "left": 16,
        "right": 16,
        "top": 16,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="header-close-button"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      color={4278190080}
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      tintColor={4278190080}
      vbHeight={24}
      vbWidth={24}
      width={16}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 0h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M21.456 5.414l-2.829-2.828-6.585 6.586-6.586-6.586-2.829 2.828L9.213 12l-6.586 6.586 2.829 2.828 6.586-6.586 6.585 6.586 2.829-2.828L14.87 12z"
          fill={4278190080}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;
